--- a/index.html
+++ b/index.html
@@ -1,21 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Work+Sans:wght@500&display=swap"
+        rel="stylesheet">
+    <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>
 
+<body>
+    <!-- Header & nav start   -->
+    <header class="header">
+        <nav>
+            <h2 class="logo">G3 Architects</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+        <!-- banner start -->
+        <section class="banner">
+            <div class="banner-info">
+                <h2 class="banner-title">Brand New</h2>
+                <h2 class="banner-title">Group of Architects </h2>
+                <p class="banner-das">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="explore-btn">Explore More</button>
+            </div>
+            <div class="banner-img">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
     </header>
+    <!-- Header end -->
     <main>
 
     </main>
+    <!-- Footer start -->
     <footer>
-        
+
     </footer>
+    <!-- Footer end -->
 </body>
+
 </html>
