--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p class="banner-das">There are many variations of passages of Lorem Ipsum available, but the majority
                     have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
-                <button class="explore-btn">Explore More</button>
+                <button class="primary-btn">Explore More</button>
             </div>
             <div class="banner-img">
                 <img src="images/banner.png" alt="">
@@ -44,11 +44,71 @@
     </header>
     <!-- Header end -->
     <main>
+        <!-- quick-list-banner start -->
+        <section class="quick-list-banner">
+            <div class="quick-list-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="quick-list-info">
+                <h2><span>Quick list</span> of Our</h2>
+                <h2> Features</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even.</p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
+        <!-- Some Facts section start -->
+        <section class="some-facts">
+            <div class="some-facts-info">
+                <h3 class="some-facts-title">Some Facts</h3>
+                <p class="some-facts-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="some-facts-container">
+                <div class="some-facts-detais">
+                    <img src="images/icons/ribon.png" alt="">]
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="some-facts-detais">
+                    <img src="images/icons/projects.png" alt="">]
+                    <h3>1458</h3>
+                    <p>Project Finished</p>
+                </div>
+                <div class="some-facts-detais">
+                    <img src="images/icons/customers.png" alt="">]
+                    <h3>590</h3>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="some-facts-detais">
+                    <img src="images/icons/email.png" alt="">]
+                    <h3>22678</h3>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </section>
+        <!-- Our Sponspors sectoin start -->
+        <section class="sponspors">
+            <div class="sponspors-info">
+                <h3 class="sponspors-title">Our Sponspors</h3>
+                <p class="sponspors-des">There are many variations of passages of Lorem Ipsum available, but</p>
+                <p class="sponspors-des"> the majority have suffered alteration.</p>
+            </div>
+            <div class="sponspors-img">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
 
     </main>
     <!-- Footer start -->
     <footer>
-
+        <p class="footer-text">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
     <!-- Footer end -->
 </body>
