some-section-html-done

--- a/index.html
+++ b/index.html
@@ -53,37 +53,54 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="quick-list-info">
-                <h2><span>Quick list</span> of Our</h2>
-                <h2> Features</h2>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <h2><span class="quick-list-style-1">Quick list </span>of Our</h2>
+                <h2 class="quick-list-style-2"> Features</h2>
+                <p class="quick-list-des">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even.</p>
                 <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
+        <!-- Features you section start -->
+        <section class="features-you">
+            <div class="features-info">
+                <div class="features-title-container">
+                    <div class="features-sitebar"></div>
+                    <div class="feature-title">
+                        <h3>Features you will </h3>
+                        <h3>love & enjoy</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
             </div>
         </section>
         <!-- Some Facts section start -->
         <section class="some-facts">
             <div class="some-facts-info">
                 <h3 class="some-facts-title">Some Facts</h3>
-                <p class="some-facts-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="banner-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration.</p>
             </div>
             <div class="some-facts-container">
                 <div class="some-facts-detais">
-                    <img src="images/icons/ribon.png" alt="">]
+                    <img src="images/icons/ribon.png" alt>
                     <h3>54</h3>
                     <p>Awards Winnings</p>
                 </div>
                 <div class="some-facts-detais">
-                    <img src="images/icons/projects.png" alt="">]
+                    <img src="images/icons/projects.png" alt>
                     <h3>1458</h3>
                     <p>Project Finished</p>
                 </div>
                 <div class="some-facts-detais">
-                    <img src="images/icons/customers.png" alt="">]
+                    <img src="images/icons/customers.png" alt>
                     <h3>590</h3>
                     <p>Clients Worked</p>
                 </div>
                 <div class="some-facts-detais">
-                    <img src="images/icons/email.png" alt="">]
+                    <img src="images/icons/email.png" alt>
                     <h3>22678</h3>
                     <p>Email Send</p>
                 </div>
