--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
             <div class="features-info">
                 <div class="features-title-container">
                     <div class="features-sitebar"></div>
-                    <div class="feature-title">
-                        <h3>Features you will </h3>
-                        <h3>love & enjoy</h3>
-                    </div>
+                    <h3 class="feature-title">Features you will love & enjoy </h3>
                 </div>
+                <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             </div>
             <div class="features-img">
                 <img src="images/architect.png" alt="">
@@ -80,8 +78,7 @@
         <section class="some-facts">
             <div class="some-facts-info">
                 <h3 class="some-facts-title">Some Facts</h3>
-                <p class="banner-des">There are many variations of passages of Lorem Ipsum available, but the majority
-                    have suffered alteration.</p>
+                <p class="banner-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteon.</p>
             </div>
             <div class="some-facts-container">
                 <div class="some-facts-detais">
@@ -107,11 +104,10 @@
             </div>
         </section>
         <!-- Our Sponspors sectoin start -->
-        <section class="sponspors">
-            <div class="sponspors-info">
-                <h3 class="sponspors-title">Our Sponspors</h3>
-                <p class="sponspors-des">There are many variations of passages of Lorem Ipsum available, but</p>
-                <p class="sponspors-des"> the majority have suffered alteration.</p>
+        <section>
+            <div class="spospors-info">
+                <h2 class="spospors-title">Our Sponspors</h2>
+                <p class="spospors-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             </div>
             <div class="sponspors-img">
                 <img src="images/sponsors/amazon.png" alt="">
