--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>G3 Architects</title>
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Work+Sans:wght@500&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -53,8 +52,8 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="quick-list-info">
-                <h2><span class="quick-list-style-1">Quick list </span>of Our</h2>
-                <h2 class="quick-list-style-2"> Features</h2>
+                <h2 class="primary-title"><span class="quick-list-style-1">Quick list </span>of Our</h2>
+                <h2 class="primary-title quick-list-style-2" pri> Features</h2>
                 <p class="quick-list-des">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even.</p>
@@ -66,47 +65,63 @@
             <div class="features-info">
                 <div class="features-title-container">
                     <div class="features-sitebar"></div>
-                    <h3 class="feature-title">Features you will love & enjoy </h3>
+                    <h3 class="primary-title">Features you will love & enjoy </h3>
                 </div>
                 <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="features-you-des-part">
+                    <h5 class="features-title">Dexktop & Mobile Version</h5>
+                    <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-you-des-part">
+                    <h5 class="features-title">Drag & Drop Builder</h5>
+                    <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-you-des-part">
+                    <h5 class="features-title">Awesome Modern Design</h5>
+                    <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-you-des-part">
+                    <h5 class="features-title">Super Easy to Edit</h5>
+                    <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
             </div>
             <div class="features-img">
                 <img src="images/architect.png" alt="">
             </div>
         </section>
         <!-- Some Facts section start -->
-        <section class="some-facts">
+        <section>
             <div class="some-facts-info">
-                <h3 class="some-facts-title">Some Facts</h3>
-                <p class="banner-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteon.</p>
+                <h2 class="primary-title">Some Facts</h2>
+                <p class="some-facts-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteon.</p>
             </div>
             <div class="some-facts-container">
                 <div class="some-facts-detais">
                     <img src="images/icons/ribon.png" alt>
-                    <h3>54</h3>
-                    <p>Awards Winnings</p>
+                    <h2 class="primare-title">54</h2>
+                    <p class="some-facts-des">Awards Winnings</p>
                 </div>
                 <div class="some-facts-detais">
                     <img src="images/icons/projects.png" alt>
-                    <h3>1458</h3>
-                    <p>Project Finished</p>
+                    <h2 class="primare-title">1458</h2>
+                    <p class="some-facts-des">Project Finished</p>
                 </div>
                 <div class="some-facts-detais">
                     <img src="images/icons/customers.png" alt>
-                    <h3>590</h3>
-                    <p>Clients Worked</p>
+                    <h2 class="primare-title">590</h2>
+                    <p class="some-facts-des">Clients Worked</p>
                 </div>
                 <div class="some-facts-detais">
                     <img src="images/icons/email.png" alt>
-                    <h3>22678</h3>
-                    <p>Email Send</p>
+                    <h2 class="primare-title">22678</h2>
+                    <p class="some-facts-des">Email Send</p>
                 </div>
             </div>
         </section>
         <!-- Our Sponspors sectoin start -->
         <section>
             <div class="spospors-info">
-                <h2 class="spospors-title">Our Sponspors</h2>
+                <h2 class="primary-title">Our Sponspors</h2>
                 <p class="spospors-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             </div>
             <div class="sponspors-img">
