--- a/index.html
+++ b/index.html
@@ -43,116 +43,114 @@
         </section>
     </header>
     <!-- Header end -->
-    <div class="hide">
-        <main>
-            <!-- quick-list-banner start -->
-            <section class="quick-list-banner">
-                <div class="quick-list-img">
-                    <img src="images/team1.png" alt="">
-                    <img src="images/team2.png" alt="">
-                    <img src="images/team3.png" alt="">
-                    <img src="images/team4.png" alt="">
+    <main>
+        <!-- quick-list-banner start -->
+        <section class="quick-list-banner">
+            <div class="quick-list-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="quick-list-info">
+                <h2 class="primary-title"><span class="quick-list-style-1">Quick list </span>of Our</h2>
+                <h2 class="primary-title quick-list-style-2" pri> Features</h2>
+                <p class="quick-list-des">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even.</p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
+        <!-- Features you section start -->
+        <section class="features-you">
+            <div class="features-info">
+                <div class="features-title-container">
+                    <div class="features-sitebar"></div>
+                    <h3 class="primary-title">Features you will love & enjoy </h3>
                 </div>
-                <div class="quick-list-info">
-                    <h2 class="primary-title"><span class="quick-list-style-1">Quick list </span>of Our</h2>
-                    <h2 class="primary-title quick-list-style-2" pri> Features</h2>
-                    <p class="quick-list-des">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered
-                        alteration in some form, by injected humour, or randomised words which don't look even.</p>
-                    <button class="primary-btn">Explore More</button>
-                </div>
-            </section>
-            <!-- Features you section start -->
-            <section class="features-you">
-                <div class="features-info">
-                    <div class="features-title-container">
-                        <div class="features-sitebar"></div>
-                        <h3 class="primary-title">Features you will love & enjoy </h3>
-                    </div>
+                <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which
+                    don't look even</p>
+                <div class="features-you-des-part">
+                    <p class="features-title">Dexktop & Mobile Version</p>
                     <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or randomised words which
-                        don't look even</p>
-                    <div class="features-you-des-part">
-                        <p class="features-title">Dexktop & Mobile Version</p>
-                        <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised...........
-                        </p>
-                    </div>
-                    <div class="features-you-des-part">
-                        <p class="features-title">Drag & Drop Builder</p>
-                        <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised...........
-                        </p>
-                    </div>
-                    <div class="features-you-des-part">
-                        <p class="features-title">Awesome Modern Design</p>
-                        <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised...........
-                        </p>
-                    </div>
-                    <div class="features-you-des-part">
-                        <p class="features-title">Super Easy to Edit</p>
-                        <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised...........
-                        </p>
-                    </div>
+                        majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
                 </div>
-                <div class="features-img">
-                    <img src="images/architect.png" alt="">
-                    <button class="ten-year-btn">
-                        <span class="btn-title">10+Year</span>
-                        <span class="btn-des">Experience</span class="btn-des">
-                    </button>
+                <div class="features-you-des-part">
+                    <p class="features-title">Drag & Drop Builder</p>
+                    <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
                 </div>
-            </section>
-            <!-- Some Facts section start -->
-            <section>
-                <div class="some-facts-info">
-                    <h2 class="primary-title">Some Facts</h2>
-                    <p class="some-facts-des">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteon.</p>
+                <div class="features-you-des-part">
+                    <p class="features-title">Awesome Modern Design</p>
+                    <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
                 </div>
-                <div class="some-facts-container">
-                    <div class="some-facts-detais">
-                        <img src="images/icons/ribon.png" alt>
-                        <h2 class="primare-title">54</h2>
-                        <p class="some-facts-des">Awards Winnings</p>
-                    </div>
-                    <div class="some-facts-detais">
-                        <img src="images/icons/projects.png" alt>
-                        <h2 class="primare-title">1458</h2>
-                        <p class="some-facts-des">Project Finished</p>
-                    </div>
-                    <div class="some-facts-detais">
-                        <img src="images/icons/customers.png" alt>
-                        <h2 class="primare-title">590</h2>
-                        <p class="some-facts-des">Clients Worked</p>
-                    </div>
-                    <div class="some-facts-detais">
-                        <img src="images/icons/email.png" alt>
-                        <h2 class="primare-title">22678</h2>
-                        <p class="some-facts-des">Email Send</p>
-                    </div>
+                <div class="features-you-des-part">
+                    <p class="features-title">Super Easy to Edit</p>
+                    <p class="features-des">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
                 </div>
-            </section>
-            <!-- Our Sponspors sectoin start -->
-            <section>
-                <div class="spospors-info">
-                    <h2 class="primary-title">Our Sponspors</h2>
-                    <p class="spospors-des">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration.</p>
+            </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+                <!-- <button class="ten-year-btn">
+                    <span class="btn-title">10+Year</span>
+                    <span class="btn-des">Experience</span class="btn-des">
+                </button> -->
+            </div>
+        </section>
+        <!-- Some Facts section start -->
+        <section>
+            <div class="some-facts-info">
+                <h2 class="primary-title">Some Facts</h2>
+                <p class="some-facts-des">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteon.</p>
+            </div>
+            <div class="some-facts-container">
+                <div class="some-facts-detais">
+                    <img src="images/icons/ribon.png" alt>
+                    <h2 class="primare-title">54</h2>
+                    <p class="some-facts-des">Awards Winnings</p>
                 </div>
-                <div class="sponspors-img">
-                    <img src="images/sponsors/amazon.png" alt="">
-                    <img src="images/sponsors/google.png" alt="">
-                    <img src="images/sponsors/spotify.png" alt="">
-                    <img src="images/sponsors/figma.png" alt="">
-                    <img src="images/sponsors/telerama.png" alt="">
+                <div class="some-facts-detais">
+                    <img src="images/icons/projects.png" alt>
+                    <h2 class="primare-title">1458</h2>
+                    <p class="some-facts-des">Project Finished</p>
                 </div>
-            </section>
+                <div class="some-facts-detais">
+                    <img src="images/icons/customers.png" alt>
+                    <h2 class="primare-title">590</h2>
+                    <p class="some-facts-des">Clients Worked</p>
+                </div>
+                <div class="some-facts-detais">
+                    <img src="images/icons/email.png" alt>
+                    <h2 class="primare-title">22678</h2>
+                    <p class="some-facts-des">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <!-- Our Sponspors sectoin start -->
+        <section>
+            <div class="spospors-info">
+                <h2 class="primary-title">Our Sponspors</h2>
+                <p class="spospors-des">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
+            </div>
+            <div class="sponspors-img">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
 
-        </main>
-    </div>
+    </main>
     <!-- Footer start -->
     <footer>
         <p class="footer-text">All rights reserved copyright@2023 startup landing page design</p>
