--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <section class="Contact Section">
             <div class="container">
                 <div style="text-align:center">
-                    <h2>Contact Us</h2>
+                    <h2 class="primary-title">Contact Us</h2>
                 </div>
                 <div class="row">
                     <div class="column">
